# spice2kicad

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  justfile
.claude/: settings.json
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: audit.yml  ci.yml
crates/kicad-emitter/: Cargo.toml
crates/kicad-emitter/src/: lib.rs  mapping.rs  netlist.rs  refine.rs  schematic.rs  sexpr.rs  v5.rs
crates/kicad-symbols/: Cargo.toml
crates/kicad-symbols/src/: lib.rs
crates/kicad-symbols/tests/: body_bbox.rs  error_paths.rs  orientation.rs  parse_and_lookup.rs
crates/kicad-symbols/tests/fixtures/: Amplifier_Operational.kicad_sym  Device.kicad_sym  Simulation_SPICE.kicad_sym  power.kicad_sym
crates/spice-diagnostics/: Cargo.toml
crates/spice-diagnostics/src/: lib.rs
crates/spice-layout/: Cargo.toml
crates/spice-layout/src/: bands.rs  cost.rs  idioms.rs  layers.rs  lib.rs  net_class.rs  orient.rs  sheets.rs  sidecar.rs  symmetry.rs
crates/spice-layout/src/archetype/: common_emitter.rs  mod.rs
crates/spice-layout/src/solver/: anneal.rs  force.rs  mod.rs  rng.rs
crates/spice-layout/tests/: cases.rs  cost.rs  idioms.rs  properties.proptest-regressions  properties.rs  refine.rs  v14_orientation.rs
crates/spice-layout/tests/common/: mod.rs
crates/spice-parser/: Cargo.toml
crates/spice-parser/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs  spec_version.rs
crates/spice-parser/tests/: corpus.rs  diagnostics.rs  directives.rs  elements.rs  fixtures.rs  lex_edges.rs  numbers.rs  spans.rs
crates/spice-parser/tests/common/: mod.rs
crates/spice-policy/: Cargo.toml
crates/spice-policy/src/: lib.rs
crates/spice-policy/tests/: policy.proptest-regressions  policy.rs
crates/spice-resolve/: Cargo.toml
crates/spice-resolve/src/: default_pinmap.rs  lib.rs
crates/spice-resolve/tests/: resolve.rs
crates/spice-route/: Cargo.toml
crates/spice-route/src/: cleanup.rs  conflict.rs  lib.rs  pwrflag.rs  rails.rs  steiner.rs  types.rs
crates/spice-route/tests/: cleanup.rs  conflict.rs  rails.rs  steiner.rs
crates/spice2kicad/: Cargo.toml
crates/spice2kicad/src/: main.rs  render.rs
crates/spice2kicad/tests/: baseline_lock.rs  electrical_safety.rs  labels.rs  layout_cache.rs  placement_quality.rs  power_source_suppression.rs  roundtrip.rs  sexp_constraints.rs  spec_version.rs  symbol_mapping.rs  value_formatting.rs  visual_quality.rs
crates/spice2kicad/tests/common/: mod.rs  sexp.rs
crates/spice2kicad/tests/fixtures/: common_emitter.cir  diff_pair.cir  multivibrator.cir  opamp_definition_level.cir  opamp_inverting.cir  opamp_inverting_real.cir  rc_lowpass.cir
docs/: annotation-spec.md  invariants.md  layout-adr.md  layout-roadmap.md  test-coverage-ngspice.md  test-coverage-spec.md
docs/superpowers/plans/: 2026-05-02-structural-layered-placement.md  2026-05-05-wiring-redesign.md
docs/superpowers/specs/: 2026-05-02-structural-layered-placement-design.md  2026-05-03-routing-redesign-proposal.md  2026-05-12-label-and-routing-quality-design.md
examples/: rc_lowpass.cir
