[workspace]
resolver = "3"
members = [
    "crates/spice-parser",
    "crates/kicad-emitter",
    "crates/spice2kicad",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/eugene/spice2eeschema"

[workspace.dependencies]
spice-parser = { path = "crates/spice-parser" }
kicad-emitter = { path = "crates/kicad-emitter" }

anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
chumsky = "0.10"
ariadne = "0.5"
log = "0.4"
env_logger = "0.11"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
only_used_in_recursion = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
