[workspace]
resolver = "3"
members = [
    "crates/spice-diagnostics",
    "crates/spice-parser",
    "crates/kicad-emitter",
    "crates/kicad-symbols",
    "crates/spice-resolve",
    "crates/spice-policy",
    "crates/spice-layout",
    "crates/spice-route",
    "crates/spice2kicad",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/eugene/spice2eeschema"

[workspace.dependencies]
spice-diagnostics = { path = "crates/spice-diagnostics" }
spice-parser = { path = "crates/spice-parser" }
kicad-emitter = { path = "crates/kicad-emitter" }
kicad-symbols = { path = "crates/kicad-symbols" }
spice-resolve = { path = "crates/spice-resolve" }
spice-policy = { path = "crates/spice-policy" }
spice-layout = { path = "crates/spice-layout" }
spice-route = { path = "crates/spice-route" }

anyhow = "1"
proptest = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
chumsky = "0.10"
ariadne = "0.6"
log = "0.4"
env_logger = "0.11"
lexpr = "0.2"
uuid = { version = "1", features = ["v5"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
only_used_in_recursion = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
