[package]
name = "kicad-emitter"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Emit KiCad schematic and netlist S-expressions from a typed circuit model"

[lints]
workspace = true

[dependencies]
spice-parser.workspace = true
thiserror.workspace = true
log.workspace = true
