[package]
name = "spice-policy"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Pre-flight layout policy / conflict-check pass for spice2kicad"

[lints]
workspace = true

[dependencies]
spice-resolve.workspace = true
spice-diagnostics.workspace = true

[dev-dependencies]
kicad-symbols.workspace = true
proptest.workspace = true
