[package]
name = "spice2kicad"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI: convert SPICE netlists to KiCad schematics / netlists"

[lints]
workspace = true

[[bin]]
name = "spice2kicad"
path = "src/main.rs"

[dependencies]
spice-diagnostics.workspace = true
spice-parser.workspace = true
spice-resolve.workspace = true
spice-policy.workspace = true
spice-layout.workspace = true
kicad-emitter.workspace = true
kicad-symbols.workspace = true
clap.workspace = true
anyhow.workspace = true
ariadne.workspace = true
log.workspace = true
env_logger.workspace = true

[dev-dependencies]
lexpr = "0.2"
kicad-symbols.workspace = true
